test-crates/duchess-java-tests/tests/ui/type_mismatch_return_type_in_Object_hashCode.stderr
error: generic type parameter `Id { data: "bool" }` not among in-scope parameters: []
 --> tests/ui/type_mismatch_return_type_in_Object_hashCode.rs:6:5
  |
6 |     public class java.lang.Object {
  |     ^^^^^^

error: aborting due to 1 previous error

